chore: update package name to @imlewc/metabase-server
- Change package name from metabase-server to scoped @imlewc/metabase-server
- Update package description for better npm discoverability
- Remove private flag to allow publishing

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "metabase-server",
+  "name": "@imlewc/metabase-server",
   "version": "0.1.0",
-  "description": "A Model Context Protocol server",
-  "private": true,
+  "description": "MCP server for interacting with Metabase - provides AI assistants with tools to query, create, and manage dashboards, cards, and databases",
   "type": "module",
   "bin": {
     "metabase-server": "./build/index.js"
